--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -1,5 +1,5 @@
 .popular-container{
-    background-color: rgb(62, 62, 62);
+    background-color: #023859;
     width: 100vw;
     display: flex;
     flex-wrap: wrap;
