--- a/src/Components/Popular/AnimeCard/AnimeCard.css
+++ b/src/Components/Popular/AnimeCard/AnimeCard.css
@@ -4,14 +4,14 @@
     align-items: flex-start;
     width: 300px;
     height: 500px;
-    background-color: rgb(38, 37, 37);
+    /* background-color: rgb(38, 37, 37); */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     overflow: hidden;
   }
 
 .anime-card:hover{
-    background-color: rgb(102, 42, 181);
+    background-color: #0477BF;
     transition: all 0.3s ease-in;
     transform: translate(0,-20px);
     cursor: pointer;
@@ -19,7 +19,7 @@
 
   .anime-card img {
     width: 100%;
-    height: 60%;
+    height: 70%;
   }
 
   .anime-card h3 {
@@ -35,7 +35,7 @@
 
   .anime-card .details {
     display: flex;
-    flex-direction: column;
+    width: 90%;
     justify-content: space-between;
     margin: 10px;
   }
@@ -43,4 +43,8 @@
   .anime-card .details p {
     font-size: 14px;
     margin: 0;
+    background-color: #6DE5F2;
+    padding: 5px 16px;
+    color:#0477BF;
+    border-radius: 20px;
   }
