--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -44,7 +44,7 @@
   .login-button span {
     position: relative;
     color: #fff;
-    fot-size: 20px;
+    font-size: 20px;
     font-family: Arial;
     letter-spacing: 8px;
     z-index: 1;
